[SYNCOPE-1327] Build works fine with Java 10 and Java 8